--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -21,34 +21,53 @@
         <div class="navbar-fixed">
         <nav>
             <div class="nav-wrapper">
-                <a href="{% url 'blog-home' %}" class="brand-logo">Django Blog</a>
+                <a href="{% url 'blog-home' %}" class="brand-logo" style="margin-left:5px;">Django Blog</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons"><i class="fas fa-bars"></i></i></a>
                 <ul class="right hide-on-med-and-down">
-                    <li><a href="{% url 'blog-home' %}">Home</a></li>
-                    <li><a href="{% url 'blog-about' %}">About</a></li>
-                    <li><a href="collapsible.html">Login</a></li>
-                    <li><a href="mobile.html">Register</a></li>
+                    <li><a href="{% url 'blog-home' %}"><i class="fas fa-home"></i> Home</a></li>
+                    <li><a href="{% url 'blog-about' %}"><i class="fas fa-address-card"></i> About</a></li>
+                    {% if user.is_authenticated %}
+                        <li><a href="{% url 'post-create' %}"><i class="fas fa-id-badge"></i> New Post</a></li>
+                        <li><a href="{% url 'profile' %}"><i class="fas fa-id-badge"></i> Profile</a></li>
+                        <li><a href="{% url 'logout' %}"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
+                    {% else %}
+                        <li><a href="{% url 'login' %}"><i class="fas fa-sign-in-alt"></i> Login</a></li>
+                        <li><a href="{% url 'register' %}"><i class="fas fa-cash-register"></i> Register</a></li>
+                    {% endif %}
                 </ul>
             </div>
         </nav>        
         </div>
             <ul class="sidenav" id="mobile-demo">
-                <li><a href="{% url 'blog-home' %}">Home</a></li>
-                <li><a href="{% url 'blog-about' %}">About</a></li>
-                <li><a href="">Login</a></li>
-                <li><a href="">Login</a></li>
+                <li><a href="{% url 'blog-home' %}"><i class="fas fa-home"></i> Home</a></li>
+                <li><a href="{% url 'blog-about' %}"><i class="fas fa-address-card"></i> About</a></li>
+                {% if user.is_authenticated %}
+                    <li><a href="{% url 'post-create' %}"><i class="fas fa-id-badge"></i> New Post</a></li>
+                    <li><a href="{% url 'profile' %}"><i class="fas fa-id-badge"></i> Profile</a></li>
+                    <li><a href="{% url 'logout' %}"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
+                {% else %}
+                    <li><a href="{% url 'login' %}"><i class="fas fa-sign-in-alt"></i> Login</a></li>
+                    <li><a href="{% url 'register' %}"><i class="fas fa-cash-register"></i> Register</a></li>
+                {% endif %}
             </ul>
     </div>
     <div class="container"  style="margin-top: 40px;">
         <div class="row">
-            <div class="col m8">
+            <div class="col m8">           
+                {% if messages %}
+                <ul class="messages">
+                    {% for message in messages %}
+                    <li {% if message.tags %} class="{{ message.tags }}"{% endif %}> {{ message }} </li>
+                    {% endfor %}
+                </ul>
+                {% endif %}
                 {% block content %}
 
                 {% endblock %}
             </div>
             <div class="col m4">
-                <div class="content-section">
-                    <h3>Our Sidebar</h3>
+                <div class="content-section" style="padding-bottom: 10px; padding-top: 0px;">
+                    <h4>Our Sidebar</h4>
                     <p class="">You can out any information here you'd like.
                         <ul class="collection">
                             <li class="collection-item">Latest Posts</li>
