--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -2,13 +2,18 @@
 {% block content %}
     {% for post in posts %}
         <article class="media content-section">
-            <div class="media-body">
-                <div class="article-metadata">
-                    <a class="mr-2" href="#">{{ post.author }}</a>
-                    <small class="text-muted">{{ post.date_posted }}</small>
+            <div class="col s2">
+                <img class="circle article-img" src="{{ post.author.profile.image.url }}" alt="">
+            </div>
+            <div class="col s10">
+                <div class="media-body">
+                    <div class="article-metadata">
+                        <a class="mr-2" href="">{{ post.author }}</a>
+                        <small class="text-muted">{{ post.date_posted | date:"F d, Y" }}</small>
+                    </div>
+                    <h5><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h5>
+                    <p class="article-content"><blockquote>{{ post.content }}</blockquote></p>
                 </div>
-                <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
-                <p class="article-content">{{ post.content }}</p>
             </div>
         </article>
     {% endfor %}
