--- a/users/templates/users/password_reset.html
+++ b/users/templates/users/password_reset.html
@@ -7,19 +7,12 @@
         <form  method="POST">
             {% csrf_token %}
             <fieldset class="">
-                <legend class="">Log In</legend>
+                <legend class="">Reset Password</legend>
                    {% form form=form %}{% endform %}
             </fieldset>
             <div class="">
-                <button type="submit" class="btn btn-outline-info">Login</button>
-                <small><a href="{% url 'password_reset' %}">Forget password?</a></small>
+                <button type="submit" class="btn btn-outline-info">Request Password Reset</button>
             </div>
         </form>
-        <div class="">
-            <small class="">
-                Need an account?
-                <a href="{% url 'register' %}">Sing Up</a>
-            </small>
-        </div>
     </div>
 {% endblock content%}
