--- a/blog/static/blog/main.css
+++ b/blog/static/blog/main.css
@@ -32,7 +32,7 @@ ul {
 
 .content-section {
   background: #ffffff;
-  padding: 120px 20px;
+  padding: 30% 20px;
   padding-top: 20px;
   border: 1px solid #dddddd;
   border-radius: 3px;
