--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,20 +1,50 @@
 {% extends "blog/base.html" %}
 {% block content %}
     {% for post in posts %}
-        <article class="media content-section">
-            <div class="col s2">
+        <div class="col s12 m11">
+            
+            <div class="card horizontal">
+            <div class="" style="margin: 10px;">
                 <img class="circle article-img" src="{{ post.author.profile.image.url }}" alt="">
             </div>
-            <div class="col s10">
-                <div class="media-body">
-                    <div class="article-metadata">
-                        <a class="mr-2" href="">{{ post.author }}</a>
-                        <small class="text-muted">{{ post.date_posted | date:"F d, Y" }}</small>
-                    </div>
-                    <h5><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h5>
-                    <p class="article-content"><blockquote>{{ post.content }}</blockquote></p>
+            <div class="card-stacked">
+                <div class="card-content" style="padding: 10px;">
+                    <h4 class="header"><a class="mr-2" href="{% url 'user-posts' post.author.username %}">{{ post.author }}</a></h4>
+                    <h5 style="margin: 0px !important;"><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h5>
+                    <small class="text-muted">{{ post.date_posted | date:"F d, Y" }}</small>
+                    <p class="article-content" style="margin: 0px;"><blockquote>{{ post.content }}</blockquote></p>
                 </div>
+                {% if post.author == user %}
+                <div class="card-action" style="margin: 0px 20px 0 20px;">            
+                    <a class="btn green darken-1 white-text " href="{% url 'post-update' post.id %}">Update</a>
+                    <a class="btn red darken-4 btn-extra-small" href="{% url 'post-delete' post.id %}">Delete</a>
+                </div>
+                  {% endif %}
             </div>
-        </article>
+        </div>
+        </div>
     {% endfor %}
+    <div class="col s12 m12">
+    {% if is_paginated %}
+        {% if page_obj.has_previous  %}
+            <a class="" href="?page=1">First</a>
+            <a class="" href="?page={{ page.obj.previous.page_number }}">Previous</a>
+        {% endif %}
+
+        {% for num in page_obj.paginator.page_range %}
+            {% if page_obj.number == num %}
+                <a class="" href="?page={{ num }}">{{ num }}</a>
+            {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3'  %}
+                <a class="" href="?page={{ num }}">{{ num }}</a>
+            {% endif %}
+        {% endfor %}
+
+        {% if page_obj.has_next  %}
+            <a class="" href="?page={{ page_obj.next_page_number }}">Next</a>
+            <a class="" href="?page={{ page.obj.paginator.num_pages }}">Last</a>
+        {% endif %}
+
+    {% endif %}
+    </div>    
+
 {% endblock %}
